# fake-oauth

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: release.yml
assets/: users.toml
mock-auth0/: Cargo.toml
mock-auth0/migrations/: 20240201221657_create_users_table.sql
mock-auth0/src/: config.rs  main.rs  state.rs
src/: main.rs
templates/: login.html  openid-configuration.json
