[workspace]
members = ["mock-auth0"]
resolver = "2"

[workspace.package]
authors = ["Mattia Penati <mattia.penati@protonmail.com>"]
edition = "2021"
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
axum = "0.7.4"
color-eyre = "0.6.2"
figment = "0.10.14"
serde = "1.0.196"
sqlx = "0.7.3"
tokio = "1.35.1"
