[package]
name = "fake-oauth"
description = "A fake OAuth implementation good for testing environment"
keywords = ["mocking", "testing", "oauth"]
homepage = "https://github.com/mattiapenati/fake-oauth"
repository = "https://github.com/mattiapenati/fake-oauth"
version = "0.3.0"
authors = ["Mattia Penati <mattia.penati@protonmail.com>"]
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = "1.0.80"
axum = "0.7.4"
cookie = "0.18.0"
data-encoding = "2.5.0"
dotenvy = "0.15.7"
figment = { version = "0.10.14", features = ["env"] }
jsonwebtoken = "9.2.0"
minijinja = "1.0.12"
notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }
parking_lot = "0.12.1"
pin-project-lite = "0.2.13"
rand = { version = "0.8.5", features = ["getrandom"], default-features = false }
rsa = "0.9.6"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_urlencoded = "0.7.1"
time = "0.3.34"
tokio = { version = "1.36.0", features = ["rt", "signal"] }
toml = "0.8.10"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "std"] }
url = { version = "2.5.0", features = ["serde"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
