[package]
name = "mock-auth0"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
color-eyre = { workspace = true }
figment = { workspace =true, features = ["env"] }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
